# mi300-influx

./: README.md  pyproject.toml
.github/workflow/: build-image.yaml  build-image.yml
.github/workflows/: build-image.yml  docker-image.yml
docker/: Dockerfile
src/: influx.py  mi300.py  run.py
