[project]
name = "mi300influx"
version = "0.1.1"
description = "An application to periodically read statistics from Bosswerk MI300 and similar micro inverters and pipe them to InfluxDB."
authors = [{name = "@GiantMolecularCloud"}]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
    "influxdb=^5.3.1"
]

[project.optional-dependencies]
dev = [
    "black>=18.3-alpha.0",
]

[project.urls]
homepage = "https://github.com/GiantMolecularCloud/mi300influx"
documentation = "https://github.com/GiantMolecularCloud/mi300influx"
repository = "https://github.com/GiantMolecularCloud/mi300influx"


[tool.black]
line-length = 120
target-version = ['py310']
include = '\.pyi?$'